Fixed the overflow issue - fixed overflow on mobile devices caused due to header. - added new photo - changed colour scheme - added new About Me

--- a/src/styles.css
+++ b/src/styles.css
@@ -18,7 +18,8 @@
 
 .header{
     min-height: 100vh;
-    background: linear-gradient(170deg, #00b2ca 75%, white 25%);
+    background: linear-gradient(170deg, #0b3954 75%, white 25%);
+    overflow-x: hidden;
 }
 
 .header-left{
@@ -39,14 +40,18 @@
 }
 
 .name{
-    color: white;
+    
     position: absolute;
     bottom: 2%;
     left: 50%;
     transform: translateX(-30%);
     font-size: 6vw;
-    width: 100%;
+    width: 90%;
     font-weight: 100;
+    color: #dec3be;
+    text-shadow: 6px 6px 0px rgba(0,0,0,0.2);
+
+
 }
 
 .header-right h2{
@@ -139,7 +144,7 @@
 
 
 footer{
-    background-color: #00b2ca;
+    background-color: #0b3954;
     padding:5% 10%;
     display: flex;
     color: #f2e8cf;
@@ -166,7 +171,8 @@ footer{
     display: flex;
     list-style: none;
     gap:4rem;
-    color: #000500;
+    /* color: #000500; */
+    color: #f2e8cf;
     font-size: 4rem;
 }
 .footer-img{
@@ -261,7 +267,8 @@ footer{
     }
     .name{
         all: unset;
-        color: white;
+        color: #dec3be;
+        text-shadow: 6px 6px 0px rgba(0,0,0,0.2);
         position: absolute;
         bottom: 2%;
         left: 50%;
